[project]
name = "yt_feed"
version = "0.3.0"
description = "Create a working RSS feed (for your podcatcher) to turn a youtube channel into an audio podcast"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-caching>=2.3.1",
    "google-api-python-client>=2.165.0",
    "gunicorn>=23.0.0",
    "isodate>=0.7.2",
    "requests>=2.32.3",
    "yt-dlp>=2025.3.21",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.build-backend]
module-name = "yt_feed"
module-root = ""

[tool.pytest.ini_options]
addopts = [
    "--cov=yt_feed",
    "--cov-report=term-missing",
]
testpaths = ["test"]
